# catkin_ws

./: .gitignore  odom.ino  test.py
src/DynamixelSDK/: ReleaseNote.md
src/DynamixelSDK/dynamixel_sdk/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/DynamixelSDK/dynamixel_sdk_examples/: CHANGELOG.rst  package.xml
src/custom_robot/: CMakeLists.txt  package.xml
src/custom_robot/evaluation/results/gmapping_20250503_173502/: gmapping_trajectory_20250503_174526.txt  results_gmapping_20250503_174526.txt
src/custom_robot/launch/: custom_slam.launch  fixed_size_gmapping.launch  fixed_size_hector.launch  gazebo_ground_truth.launch  lidar.launch  robot_bringup.launch  robot_description.launch  robot_slam.launch  slam_with_ground_truth.launch
src/custom_robot/rviz/: ground_truth.rviz  robot_view.rviz
src/custom_robot/scripts/: batch_evaluate_slam.py  compare_results.py  compare_slam.py  compare_slam_methods.py  custom_teleop.py  evaluate_real_slam.py  evaluate_slam.py  gazebo_ground_truth.py  generate_slam_report.py  map_quality_test.py  monitor_slam_resources.py  odom_converter.py  publish_trajectories.py  record_slam_data.py  record_slam_data.sh  run_fixed_size_slam.sh  run_separate_slam_comparison.sh  run_slam_evaluation.sh  save_map.sh  save_map_timestamped.py  test_movement.py
src/turtlebot3/turtlebot3_bringup/launch/: turtlebot3_lidar.launch  turtlebot3_robot.launch
src/turtlebot3/turtlebot3_bringup/launch/includes/: lidar_x2.launch.xml
src/turtlebot3/turtlebot3_description/urdf/: turtlebot3_burger.gazebo.xacro  turtlebot3_burger.urdf.xacro
src/turtlebot3/turtlebot3_slam/config/: turtlebot3_lds_2d.lua
src/turtlebot3/turtlebot3_slam/launch/: turtlebot3_cartographer.launch
src/turtlebot3_simulations/turtlebot3_gazebo/launch/: turtlebot3_arena.launch
src/turtlebot3_simulations/turtlebot3_gazebo/models/turtlebot3_arena2/: model.sdf  (+1 more)
src/turtlebot3_simulations/turtlebot3_gazebo/worlds/: turtlebot3_arena.world
src/ydlidar_ros_driver/launch/: X2.launch
