<?xml version="1.0"?>
<package format="2">
  <name>custom_robot</name>
  <version>0.1.0</version>
  <description>Package for custom robot with Arduino Mega and YDLidar X2</description>

  <maintainer email="user@example.com">Your Name</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf</depend>
  <depend>ydlidar_ros_driver</depend>
  
</package>