<?xml version="1.0"?>
<package format="2">
  <name>dynamixel_sdk_examples</name>
  <version>3.8.0</version>
  <description>The DYNAMIXEL SDK ROS example package</description>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <license>Apache 2.0</license>
  <author email="zerom@robotis.com">zerom</author>
  <author email="willson@robotis.com">Will Son</author>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>dynamixel_sdk</depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
